# flowonnx

./: .clang-format  CMakeLists.txt  README.md
src/: CMakeLists.txt
src/flowonnx/: CMakeLists.txt  common.h  environment.cpp  environment.h  flowonnx.h  flowonnxConfig.cmake.in  flowonnx_common.h  flowonnxglobal.h  format.cpp  format.h  inference.cpp  inference.h  session.cpp  session.h  tensor.cpp  tensor.h
src/flowonnx/core/: modelpool.h  taskqueue.cpp  taskqueue.h
src/flowonnx/private/: inference_p.h  session_p.h
src/flowonnx/utils/: format.cpp  format.h  singleton.h  tensor.cpp  tensor.h
tests/: CMakeLists.txt  test1.cpp
tests/data/: test_graph_0.json
